--- a/Assignments/SinaSarsharPour_COMP304Sec002_Lab02_Ex01/app/src/main/AndroidManifest.xml
+++ b/Assignments/SinaSarsharPour_COMP304Sec002_Lab02_Ex01/app/src/main/AndroidManifest.xml
@@ -13,6 +13,33 @@
         android:theme="@style/Theme.SinaSarsharPour_COMP304Sec002_Lab02_Ex01"
         tools:targetApi="31">
         <activity
+            android:name=".CustomerDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PaymentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CheckOutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AutoAccessoriesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FurnituresActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ComputersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TVsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AppliancesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeSelectActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
